--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
-// !!! DO NOT STORE ANY PRIVATE CREDENTIALS IN THIS FILE !!!
-// TODO CURRENTLY NEED TO CHANGE MANUALLY: ./.git/config
+# !!! DO NOT STORE ANY PRIVATE CREDENTIALS IN THIS FILE !!!
+# TODO CURRENTLY NEED TO CHANGE MANUALLY: ./.git/config
 
 # AWS
-// deployment uri and profile for aws (doesn't need to be REACT_APP because used in package.json)
+# deployment uri and profile for aws (doesn't need to be REACT_APP because used in package.json)
 PROFILE=unegma
 AWS_REGION=eu-west-2
 AWS_BUCKET_NAME=unegma.store
-// TODO CURRENTLY NEED TO CHANGE MANUALLY: ./settings/bucket_policy.json Resource
+# TODO CURRENTLY NEED TO CHANGE MANUALLY: ./settings/bucket_policy.json Resource
 
 # Original
 ORIGINAL_GITHUB=https://github.com/unegma/store
 
 # React app variables (must be prefixed with REACT_APP_)
 REACT_APP_TITLE=unegma.store
-REACT_APP_NAV_TITLE=Unegma Store
-REACT_APP_DESCRIPTION=Stores with unegma.store
-REACT_APP_ADDRESS=71-75 Shelton Street WC2H 9JQ
+REACT_APP_NAV_TITLE="Unegma Store"
+REACT_APP_DESCRIPTION="Stores with unegma.store"
+REACT_APP_ADDRESS="71-75 Shelton Street WC2H 9JQ"
 REACT_APP_CONTACT=tim@unegma.com
 REACT_APP_GOOGLE_TAG_MANAGER_ID=GTM-PQFQLX4
 REACT_APP_ASSETS_URL=https://assets.unegma.net/unegma.store/unegma.store
