--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ AWS_BUCKET_NAME=unegma.store
 
 # Original
 ORIGINAL_GITHUB=https://github.com/unegma/store
-ORIGINAL_GITHUB_SSH=git@github.com:unegma/store
+ORIGINAL_GITHUB_SSH=git@github.com:unegma/unegma.store.git
 
 # React app variables (must be prefixed with REACT_APP_)
 REACT_APP_TITLE=unegma.store
