--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ AWS_BUCKET_NAME=unegma.store
 # TODO CURRENTLY NEED TO CHANGE MANUALLY: ./settings/bucket_policy.json Resource
 
 # Original
-ORIGINAL_GITHUB=https://github.com/unegma/store
-ORIGINAL_GITHUB_SSH=git@github.com:unegma/unegma.store.git
+ORIGINAL_GITHUB=https://github.com/unegma/stores
+ORIGINAL_GITHUB_SSH=git@github.com:unegma/stores.git
 
 # React app variables (must be prefixed with REACT_APP_)
 REACT_APP_TITLE=unegma.store
