--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # deployment uri and profile for aws (doesn't need to be REACT_APP because used in package.json)
 PROFILE=unegma
 AWS_REGION=eu-west-2
-AWS_BUCKET_NAME=unegma.store
+AWS_BUCKET_NAME=example.unegma.store
 # TODO CURRENTLY NEED TO CHANGE MANUALLY: ./settings/bucket_policy.json Resource
 
 # Original
